Initially add visibility bits as layer property

As decided in T38384, this adds the visibility bits as layer property for testing.
Each layer now has the 20 visibility bits that are compared to the ones from the object. The viewport header shows the bits of the active layer.

The bits currently only affect drawing.